test/fail/basic_syntax/function_redeclaration.lly
#[
SyntaxError: f has already been declared.
    from function_redeclaration.lly:6
]#

define f {} define f {}
